--- a/Dockerfile-Plugins
+++ b/Dockerfile-Plugins
@@ -6,5 +6,5 @@ RUN /opt/netbox/venv/bin/pip install  --no-warn-script-location -r /plugin_requi
 # COPY /opt/netbox/netbox/static/netbox_topology_views/img/server.png /opt/netbox/netbox/static/netbox_topology_views/img/role-unknown.png
 
 # These lines are only required if your plugin has its own static files.
-COPY configuration/plugins.py /etc/netbox/config/plugins.py
+COPY plugins.py /etc/netbox/config/plugins.py
 RUN SECRET_KEY="dummy" /opt/netbox/venv/bin/python /opt/netbox/netbox/manage.py collectstatic --no-input
