--- a/Dockerfile-Plugins
+++ b/Dockerfile-Plugins
@@ -3,8 +3,8 @@ FROM netboxcommunity/netbox:latest
 COPY ./plugin_requirements.txt /
 RUN /opt/netbox/venv/bin/pip install  --no-warn-script-location -r /plugin_requirements.txt
 
-# COPY /opt/netbox/netbox/static/netbox_topology_views/img/server.png /opt/netbox/netbox/static/netbox_topology_views/img/role-unknown.png
-
 # These lines are only required if your plugin has its own static files.
 COPY plugins.py /etc/netbox/config/plugins.py
 RUN SECRET_KEY="dummy" /opt/netbox/venv/bin/python /opt/netbox/netbox/manage.py collectstatic --no-input
+
+COPY /opt/netbox/netbox/static/netbox_topology_views/img/server.png /opt/netbox/netbox/static/netbox_topology_views/img/role-unknown.png
